--- a/Project/Showcase/Showcase.ioc
+++ b/Project/Showcase/Showcase.ioc
@@ -32,14 +32,16 @@ Mcu.IP1=NVIC
 Mcu.IP2=RCC
 Mcu.IP3=SYS
 Mcu.IP4=TIM21
-Mcu.IP5=USART2
-Mcu.IPNb=6
+Mcu.IP5=TIM22
+Mcu.IP6=USART2
+Mcu.IPNb=7
 Mcu.Name=STM32L053R(6-8)Tx
 Mcu.Package=LQFP64
 Mcu.Pin0=PC13
 Mcu.Pin1=PC14-OSC32_IN
 Mcu.Pin10=VP_SYS_VS_Systick
 Mcu.Pin11=VP_TIM21_VS_ClockSourceINT
+Mcu.Pin12=VP_TIM22_VS_ClockSourceINT
 Mcu.Pin2=PC15-OSC32_OUT
 Mcu.Pin3=PH0-OSC_IN
 Mcu.Pin4=PH1-OSC_OUT
@@ -48,7 +50,7 @@ Mcu.Pin6=PA3
 Mcu.Pin7=PA5
 Mcu.Pin8=PA13
 Mcu.Pin9=PA14
-Mcu.PinsNb=12
+Mcu.PinsNb=13
 Mcu.ThirdPartyNb=0
 Mcu.UserConstants=
 Mcu.UserName=STM32L053R8Tx
@@ -175,12 +177,16 @@ SH.GPXTI13.0=GPIO_EXTI13
 SH.GPXTI13.ConfNb=1
 TIM21.IPParameters=Period
 TIM21.Period=31999
+TIM22.IPParameters=Prescaler
+TIM22.Prescaler=32
 USART2.IPParameters=VirtualMode-Asynchronous
 USART2.VirtualMode-Asynchronous=VM_ASYNC
 VP_SYS_VS_Systick.Mode=SysTick
 VP_SYS_VS_Systick.Signal=SYS_VS_Systick
 VP_TIM21_VS_ClockSourceINT.Mode=Internal
 VP_TIM21_VS_ClockSourceINT.Signal=TIM21_VS_ClockSourceINT
+VP_TIM22_VS_ClockSourceINT.Mode=Internal
+VP_TIM22_VS_ClockSourceINT.Signal=TIM22_VS_ClockSourceINT
 board=NUCLEO-L053R8
 boardIOC=true
 isbadioc=false
