[main] Set prescaler and counter period of TIM21(1ms) and TIM22(1us) below.
- TIM21, 1ms, prescaler[3199], counter period[9]
- TIM22, 1us, prescaler[31], counter period[65535]
- Verify by __MEASURE_TIM22

--- a/Project/Showcase/Showcase.ioc
+++ b/Project/Showcase/Showcase.ioc
@@ -136,7 +136,7 @@ ProjectManager.ToolChainLocation=
 ProjectManager.UAScriptAfterPath=
 ProjectManager.UAScriptBeforePath=
 ProjectManager.UnderRoot=true
-ProjectManager.functionlistsort=1-SystemClock_Config-RCC-false-HAL-false,2-MX_GPIO_Init-GPIO-false-HAL-true,3-MX_DMA_Init-DMA-false-HAL-true,4-MX_USART2_UART_Init-USART2-false-HAL-true,5-MX_TIM21_Init-TIM21-false-HAL-true
+ProjectManager.functionlistsort=1-SystemClock_Config-RCC-false-HAL-false,2-MX_GPIO_Init-GPIO-false-HAL-true,3-MX_DMA_Init-DMA-false-HAL-true,4-MX_USART2_UART_Init-USART2-false-HAL-true,5-MX_TIM21_Init-TIM21-false-HAL-true,6-MX_TIM22_Init-TIM22-false-HAL-true
 RCC.48CLKFreq_Value=32000000
 RCC.48RNGFreq_Value=32000000
 RCC.48USBFreq_Value=32000000
@@ -175,10 +175,11 @@ RCC.VCOOutputFreq_Value=64000000
 RCC.WatchDogFreq_Value=37000
 SH.GPXTI13.0=GPIO_EXTI13
 SH.GPXTI13.ConfNb=1
-TIM21.IPParameters=Period
-TIM21.Period=31999
+TIM21.IPParameters=Period,Prescaler
+TIM21.Period=9
+TIM21.Prescaler=3199
 TIM22.IPParameters=Prescaler
-TIM22.Prescaler=32
+TIM22.Prescaler=31
 USART2.IPParameters=VirtualMode-Asynchronous
 USART2.VirtualMode-Asynchronous=VM_ASYNC
 VP_SYS_VS_Systick.Mode=SysTick
