--- a/Project/SC_NUCLEO-F429ZI/Showcase_F429ZI.ioc
+++ b/Project/SC_NUCLEO-F429ZI/Showcase_F429ZI.ioc
@@ -15,9 +15,12 @@ Mcu.IP0=ETH
 Mcu.IP1=NVIC
 Mcu.IP2=RCC
 Mcu.IP3=SYS
-Mcu.IP4=USART3
-Mcu.IP5=USB_OTG_FS
-Mcu.IPNb=6
+Mcu.IP4=TIM3
+Mcu.IP5=TIM4
+Mcu.IP6=TIM12
+Mcu.IP7=USART3
+Mcu.IP8=USB_OTG_FS
+Mcu.IPNb=9
 Mcu.Name=STM32F429ZITx
 Mcu.Package=LQFP144
 Mcu.Pin0=PC13
@@ -42,14 +45,17 @@ Mcu.Pin25=PG11
 Mcu.Pin26=PG13
 Mcu.Pin27=PB7
 Mcu.Pin28=VP_SYS_VS_Systick
+Mcu.Pin29=VP_TIM3_VS_ClockSourceINT
 Mcu.Pin3=PH0/OSC_IN
+Mcu.Pin30=VP_TIM4_VS_ClockSourceINT
+Mcu.Pin31=VP_TIM12_VS_ClockSourceINT
 Mcu.Pin4=PH1/OSC_OUT
 Mcu.Pin5=PC1
 Mcu.Pin6=PA1
 Mcu.Pin7=PA2
 Mcu.Pin8=PA7
 Mcu.Pin9=PC4
-Mcu.PinsNb=29
+Mcu.PinsNb=32
 Mcu.ThirdPartyNb=0
 Mcu.UserConstants=
 Mcu.UserName=STM32F429ZITx
@@ -116,29 +122,29 @@ PA9.Locked=true
 PA9.Mode=Activate_VBUS
 PA9.Signal=USB_OTG_FS_VBUS
 PB0.GPIOParameters=GPIO_Label
-PB0.GPIO_Label=LD1 [Green]
+PB0.GPIO_Label=LD1(G)
 PB0.Locked=true
-PB0.Signal=GPIO_Output
+PB0.Signal=S_TIM3_CH3
 PB13.GPIOParameters=GPIO_Label
 PB13.GPIO_Label=RMII_TXD1 [LAN8742A-CZ-TR_TXD1]
 PB13.Locked=true
 PB13.Mode=RMII
 PB13.Signal=ETH_TXD1
 PB14.GPIOParameters=GPIO_Label
-PB14.GPIO_Label=LD3 [Red]
+PB14.GPIO_Label=LD3(R)
 PB14.Locked=true
-PB14.Signal=GPIO_Output
+PB14.Signal=S_TIM12_CH1
 PB7.GPIOParameters=GPIO_Label
-PB7.GPIO_Label=LD2 [Blue]
+PB7.GPIO_Label=LD2(B)
 PB7.Locked=true
-PB7.Signal=GPIO_Output
+PB7.Signal=S_TIM4_CH2
 PC1.GPIOParameters=GPIO_Label
 PC1.GPIO_Label=RMII_MDC [LAN8742A-CZ-TR_MDC]
 PC1.Locked=true
 PC1.Mode=RMII
 PC1.Signal=ETH_MDC
 PC13.GPIOParameters=GPIO_Label
-PC13.GPIO_Label=USER_Btn [B1]
+PC13.GPIO_Label=B1(B)
 PC13.Locked=true
 PC13.Signal=GPXTI13
 PC14/OSC32_IN.Locked=true
@@ -293,12 +299,33 @@ RCC.VcooutputI2SQ=192000000
 RCC.WatchDogFreq_Value=32000
 SH.GPXTI13.0=GPIO_EXTI13
 SH.GPXTI13.ConfNb=1
+SH.S_TIM12_CH1.0=TIM12_CH1,PWM Generation1 CH1
+SH.S_TIM12_CH1.ConfNb=1
+SH.S_TIM3_CH3.0=TIM3_CH3,PWM Generation3 CH3
+SH.S_TIM3_CH3.ConfNb=1
+SH.S_TIM4_CH2.0=TIM4_CH2,PWM Generation2 CH2
+SH.S_TIM4_CH2.ConfNb=1
+TIM12.Channel-PWM\ Generation1\ CH1=TIM_CHANNEL_1
+TIM12.IPParameters=Channel-PWM Generation1 CH1,Period
+TIM12.Period=16799
+TIM3.Channel-PWM\ Generation3\ CH3=TIM_CHANNEL_3
+TIM3.IPParameters=Channel-PWM Generation3 CH3,Period
+TIM3.Period=16799
+TIM4.Channel-PWM\ Generation2\ CH2=TIM_CHANNEL_2
+TIM4.IPParameters=Channel-PWM Generation2 CH2,Period
+TIM4.Period=16799
 USART3.IPParameters=VirtualMode
 USART3.VirtualMode=VM_ASYNC
 USB_OTG_FS.IPParameters=VirtualMode
 USB_OTG_FS.VirtualMode=Device_Only
 VP_SYS_VS_Systick.Mode=SysTick
 VP_SYS_VS_Systick.Signal=SYS_VS_Systick
+VP_TIM12_VS_ClockSourceINT.Mode=Internal
+VP_TIM12_VS_ClockSourceINT.Signal=TIM12_VS_ClockSourceINT
+VP_TIM3_VS_ClockSourceINT.Mode=Internal
+VP_TIM3_VS_ClockSourceINT.Signal=TIM3_VS_ClockSourceINT
+VP_TIM4_VS_ClockSourceINT.Mode=Internal
+VP_TIM4_VS_ClockSourceINT.Signal=TIM4_VS_ClockSourceINT
 board=NUCLEO-F429ZI
 boardIOC=true
 isbadioc=false
